# sponsrdump

./: .gitignore  Makefile  pyproject.toml
src/: cli.py  downloader.py
src/ffmpeg/: ffmpeg.py
src/kinescope/: kinescope.py  master_mpd.py  quality.py
src/sponsr/: sponsr_auth.py  sponsr_grabber.py  sponsr_post.py  sponsr_project.py
tests/kinescope_test/: test_master_mpd.py
tests/kinescope_test/fixtures/: master.mpd.xml  master.mpd_720_1080_video.xml
tests/sponsr_test/: test_sponsr_auth.py  test_sponsr_post.py  test_sponsr_project.py
tests/sponsr_test/fixtures/: post_preview.html  post_preview_with_many_frames.html  project_page.html
