[tool.poetry]
name = "sponsrdump"
version = "0.1.0"
description = ""
authors = ["etatarintsev <evtatarintsev@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "==2.32.3"
beautifulsoup4 = "==4.13.3"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pytest = "==8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.13"
strict = true